<resources>
    <string name="app_name">MvpBasics</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember Me</string>
    <string name="suggest_register_text">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="go_sign_in">Don\'t have an account yet ? </string>
    <string name="accept_terms">I agree to the  </string>
    <string name="terms_conditions_string">Terms &amp; Conditions</string>
    <string name="invalid_email">Badly formed email </string>
    <string name="invalid_password">Invalid Password </string>
    <string name="invalid_username">Invalid Username </string>
    <string name="invalid_full_name">Invalid Full Name  </string>
    <string name="email_used">Sorry Email is used by other user  </string>
    <string name="username_used">Sorry Username is used by other user </string>
    <string name="accept_terms_please">Please Accept our </string>
    <string name="or_use">Or use</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="success_sign_up">Successfully signed up !</string>
    <string name="error_sign_up">Sign up was failed !</string>
    <string name="error_sign_in">Sign in was failed !</string>
    <string name="error_empty">Sorry this field can\'t  be empty</string>
    <string name="user_not_found">User hasn\'t been found seems username or password is wrong</string>
    <string name="facebook">Facebook</string>
    <string name="home">Home</string>
    <string name="celsius">℃</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="personal_fragment">Personal Fragment</string>
    <string name="personal">Personal</string>
    <string name="log_out">Log Out</string>
    <string name="error_request_weather">It seems you don\'t have access to internet or the address is wrong </string>
    <string name="weather_api_key">3f2076070ae8fbcd02fac4b9569c6fb3</string>
    <string name="weather_get_request">weather?appid=3f2076070ae8fbcd02fac4b9569c6fb3&amp;units=metric</string>
    <string name="arilines_get_request">passenger?page=0&amp;size=10</string>
    <string name="weather_celsius_attr">Weather key Celsius</string>
    <string name="base_url_weather">http://api.openweathermap.org/data/2.5/</string>
    <string name="base_url_airlines">https://api.instantwebtools.net/v1/</string>
    <string name="favourites">Favourites</string>
    <string name="news">News</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="yerevan">YEREVAN</string>
    <string name="zero">0</string>
    <string name="all_users">All Users</string>
    <string name="key_id">key of some object</string>
    <string name="airlines_v1">Airlines V1</string>
    <string name="airlines_v2">"Airlines V2 "</string>


    <string-array name="cities">
        <item>Yerevan</item>
        <item>Moscow</item>
        <item>Baku</item>
        <item>Paris</item>
        <item>Barcelona</item>
        <item>Los Angeles</item>
        <item>Istanbul</item>
        <item>Tbilisi</item>
        <item>Tehran</item>
        <item>Berlin</item>
        <item>Milan</item>
        <item>Barcelona</item>
        <item>New York</item>
        <item>London</item>
        <item>Manchester</item>
        <item>Ankara</item>
        <item>Krasnodar</item>
        <item>Rome</item>
    </string-array>


</resources>