<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name_def"
            style="@style/TextViewArgumentBoldStyle"
            android:text="@string/name" />
        <TextView
            android:id="@+id/name"
            style="@style/TextViewArgumentStyle"
            android:hint="@string/name"
             />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_def"
            style="@style/TextViewArgumentBoldStyle"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            style="@style/TextViewArgumentStyle"
            android:layout_weight="0.5"
            android:hint="@string/email" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log_def"
            style="@style/TextViewArgumentBoldStyle"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login"
            style="@style/TextViewArgumentStyle"
            android:hint="@string/login" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out"
        style="@style/ButtonStyle"
        android:text="@string/log_out" />

</androidx.appcompat.widget.LinearLayoutCompat>