<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewTitleStyle"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_big"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/requiredActivityTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/go_sign_in"
                android:textSize="14sp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/InputLayoutStyle"

            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/InputStyle"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameLayout"
            style="@style/InputLayoutStyle"

            android:layout_margin="@dimen/default_big">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                style="@style/InputStyle"
                android:hint="@string/full_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/InputLayoutStyle"
            android:layout_margin="@dimen/default_big"
            android:hint="@string/username"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                style="@style/InputStyle"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            style="@style/InputLayoutStyle"
            android:layout_margin="@dimen/default_big"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/InputStyle"
                android:hint="@string/password"
                android:imeOptions="actionDone"

                android:inputType="textWebPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_big"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox"
                style="@style/CheckBoxBlue"
                android:imeOptions="actionDone" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            style="@style/ButtonStyle"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>
