<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    android:gravity="center"
    android:orientation="vertical"

    >

    <TextView

        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/yerevan"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/celsius"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/blue"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/orange"
        android:visibility="visible" />


</androidx.appcompat.widget.LinearLayoutCompat>